(fix) fix alignment and spacing for search bar

--- a/client/search/_search.scss
+++ b/client/search/_search.scss
@@ -1,48 +1,50 @@
 .search {
-	select {
-		max-width: 140px;
-	}
+  width: 450px;
 
-	button {
-		float: left;
-		margin-left: 0;
-		margin-right: 0;
-		min-width: 125px;
+  select {
+    width: 150px;
+  }
 
-		&.button-left {
-			border-radius: 5px 0 0 5px;
-		}
+  button {
+    float: left;
+    margin-left: 0;
+    margin-right: 0;
 
-		&.button-right {
-			border-radius: 0 5px 5px 0;
-		}
+    &.button-left {
+      border-radius: 5px 0 0 5px;
+    }
 
-		&.selected {
-			background-color: #5698C6;
-			box-shadow: inset 0 4px 5px rgba(0, 0, 0, 0.19);
-		}
-	}
+    &.button-right {
+      border-radius: 0 5px 5px 0;
+    }
 
-	input[type=text] {
-		background: #171717;
-		color: #FFF;
-		padding: 8px 7px;
-		font-size: 13px;
-		border: 1px solid #505050;
-		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(228, 228, 228, 0.26);
-		border-radius: 4px;
-		float:left;
+    &.selected {
+      background-color: #5698C6;
+      box-shadow: inset 0 4px 5px rgba(0, 0, 0, 0.19);
+    }
+  }
 
-		&:focus {
-			border-color: rgba(82,168,236,0.8);
-			box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
-		}
-	}
+  input[type=text] {
+    background: #171717;
+    color: #FFF;
+    padding: 8px 7px;
+    font-size: 13px;
+    border: 1px solid #505050;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(228, 228, 228, 0.26);
+    border-radius: 4px;
+    float:left;
+    width: 150px;
 
-	.loading {
-		width: 20px;
-		position: absolute;
-		margin-top: -27px;
-		margin-left: -32px;
-	}
+    &:focus {
+      border-color: rgba(82,168,236,0.8);
+      box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+    }
+  }
+
+  .loading {
+    width: 20px;
+    position: absolute;
+    margin-top: -27px;
+    margin-left: -32px;
+  }
 }
